# routes/api.php
@@ -12,7 +12,10 @@ use App\Http\Controllers\Auth\PasswordResetLinkController;
 use App\Http\Controllers\Auth\RegisteredUserController;
 use App\Http\Controllers\Auth\VerifyEmailController;
 use App\Http\Controllers\CategoryController;
+use App\Http\Controllers\OwnSliderController;
 use App\Http\Controllers\ProductController;
+use App\Http\Controllers\WebsiteController;
+use App\Models\ownSlider;
 
 /*
 |--------------------------------------------------------------------------
@@ -37,12 +40,17 @@ Route::post('/reset-password', [NewPasswordController::class, 'store'])->middlew
 Route::post('/confirm-password', [ConfirmablePasswordController::class, 'store'])->middleware('auth');
 Route::post('/logout', [AuthenticatedSessionController::class, 'destroy'])->middleware('auth')->name('logout');
 
+Route::get('/website', [WebsiteController::class, 'websiteshow'])->middleware('guest');
+Route::get('view-active-product',[ProductController::class, 'productActiveShow']);
+Route::get('view-active-product/{id}',[ProductController::class, 'productActiveShow']);
+
 Route::middleware(['auth:sanctum'])->name('api.')->group(function () {
     // Admin
 
     // Category
     Route::post('add-category',[CategoryController::class, 'store']);
     Route::get('view-category',[CategoryController::class, 'show']);
+    Route::get('view-category/{id}',[CategoryController::class, 'show']);
     Route::get('view-category/{id}/{parent_id}',[CategoryController::class, 'show']);
     Route::post('edit-category/{id}',[CategoryController::class, 'update']);
     Route::post('edit-category-status/{id}',[CategoryController::class, 'updateStatus']);
@@ -56,7 +64,15 @@ Route::middleware(['auth:sanctum'])->name('api.')->group(function () {
     Route::post('edit-product-status/{id}',[ProductController::class, 'UpdateProductStatus']);
     Route::delete('delete-product/{id}',[ProductController::class, 'productDestroy']);
 
+    // Banner
+    Route::post('add-banner',[OwnSliderController::class, 'bannerstore']);
+    Route::get('view-banner',[OwnSliderController::class, 'bannershow']);
+    Route::get('view-banner/{id}',[OwnSliderController::class, 'bannershow']);
+    Route::post('edit-banner/{id}',[OwnSliderController::class, 'bannerupdate']);
+    Route::post('edit-banner-status/{id}',[OwnSliderController::class, 'bannerUpdateStatus']);
+    Route::delete('delete-banner/{id}',[OwnSliderController::class, 'bannerDestroy']);
+
 });
 
 // Route::middleware(['auth:sanctum'])->name('api.')->group(function () {
-// });
+    // });
